--- a/assets/css/RegistrarUsuarios.css
+++ b/assets/css/RegistrarUsuarios.css
@@ -724,11 +724,16 @@ height: 40px;
     margin-top: 20px;
 }
 
-.container3 input{
+.container3 input, select{
     padding: 11px;
     border: 1px solid black;
     border-radius: 10px;
 }
+
+.container3 select{
+	width: 180px;
+}
+
 
 .container3 {
     text-align: center;
@@ -803,7 +808,7 @@ height: 40px;
 
 
 @media screen and (max-width: 576px) {
-	#content nav form .form-input input {
+	#content nav form .form-input input, select {
 		display: none;
 	}
 
@@ -815,11 +820,11 @@ height: 40px;
 		color: var(--dark);
 	}
 
-	#content nav form.show .form-input input {
+	#content nav form.show .form-input input, select {
 		display: block;
 		width: 100%;
 	}
-	#content nav form.show .form-input button {
+	#content nav form.show .form-input button, select {
 		width: 36px;
 		height: 100%;
 		border-radius: 0 36px 36px 0;
